Fixed spacing on columns width

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ nav ul li {
     float: left;
     padding: 0px 18px;
     position: relative;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .column p{
